[gd_scene load_steps=12 format=3 uid="uid://cii50ghlrtqub"]

[ext_resource type="Script" path="res://Entities/entities_script/enemy_5.gd" id="1_t5wye"]
[ext_resource type="Texture2D" uid="uid://climvjt7k081s" path="res://Sprites/arachne-1.2/PNG/48x64/arachne-NESW.png" id="2_q6hlv"]

[sub_resource type="Animation" id="Animation_a2bv7"]
resource_name = "walk_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_nrsg7"]
resource_name = "walk_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_fnwsq"]
resource_name = "walk_up"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_40gic"]
resource_name = "walk_down"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_8gf11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8drro"]
_data = {
"RESET": SubResource("Animation_8gf11"),
"walk_down": SubResource("Animation_40gic"),
"walk_left": SubResource("Animation_a2bv7"),
"walk_right": SubResource("Animation_nrsg7"),
"walk_up": SubResource("Animation_fnwsq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y5h10"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eyrp5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hns4o"]

[node name="enemy_5" type="CharacterBody2D"]
scale = Vector2(0.6, 0.6)
collision_layer = 32
collision_mask = 8
script = ExtResource("1_t5wye")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_q6hlv")
hframes = 3
vframes = 4
frame = 7

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8drro")
}

[node name="enemy_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_y5h10")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="freeze_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="death_timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 32
collision_mask = 3

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
scale = Vector2(3, 3)
shape = SubResource("CapsuleShape2D_eyrp5")

[node name="chase_box" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="chase_box"]
scale = Vector2(25, 25)
shape = SubResource("CircleShape2D_hns4o")

[node name="Label" type="Label" parent="."]
offset_left = -26.0
offset_top = -70.0
offset_right = 28.0
offset_bottom = -52.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 18
text = "250"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="freeze_timer" to="." method="_on_freeze_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="chase_box" to="." method="_on_chase_box_area_entered"]
